[package]
name = "cryptoprices-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_derive = "1.0.137"
serde_json = { version = "1.0.81", features = ["raw_value"] }
csv = "1.1.6"